--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,13 @@ html {
   font-family: 'Poppins', sans-serif;
 }
 
+body {
+  max-width: 1320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 li,
 p,
 a {
@@ -28,6 +35,7 @@ a {
 
 
 /* custom class' */
+
 .section-title {
   font-size: 36px;
   font-style: normal;
