--- a/src/index.css
+++ b/src/index.css
@@ -19,15 +19,15 @@ html {
   font-family: 'Poppins', sans-serif;
 }
 
-body {
-  max-width: 1320px;
-  margin-left: auto;
-  margin-right: auto;
-}
 
-h1,h2,h3,h4 {
+
+h1,
+h2,
+h3,
+h4 {
   font-weight: 600;
 }
+
 li,
 p,
 a {
@@ -42,4 +42,20 @@ a {
   font-style: normal;
   font-weight: 600;
   line-height: 120%;
+}
+
+.section-container {
+  max-width: 1320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* screen media  */
+@media screen and (max-width: 1400px) {
+
+  .section-container {
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
